test/files/neg/t2031.check
t2031.scala:8: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]scala.collection.mutable.ReusableBuilder[A,scala.collection.immutable.TreeSet[A]]
 required: Ordering[Int]
 res0.map(x => x)(TreeSet.newBuilder)
                          ^
one error found
